[tool.poetry]
name = "RandomCarrot"
version = "1.0-stable"
description = "RandomCarrot can easily generate random numbers, letters and even both together! Easy to use, easy to import!"
authors = ["Mark Pavlenko <markpavlenkos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.packages]
include = ["setup.py"]